--- a/src/components/icons/ParodyIcon.astro
+++ b/src/components/icons/ParodyIcon.astro
@@ -8,17 +8,19 @@ const { class: className } = Astro.props;
 
 <svg class={className} viewBox="0 0 24 24">
   <path
-    fill="#62676c"
+    class="glass:fill-white/60 fill-[#62676c]"
     d="M12 2v17c-.6 0-1.2-.2-1.8-.4C4.5 16 4 9.5 4 4c0-.3.3-.5.6-.4C6.5 4.5 9 5 12 5z"
   ></path>
   <path
-    fill="#82878c"
+    class="glass:fill-white/80 fill-[#82878c]"
     d="M12 2v17c.6 0 1.2-.2 1.8-.4C19.5 16 20 9.5 20 4c0-.3-.3-.5-.6-.4C17.5 4.5 15 5 12 5z"
   ></path>
-  <path fill="#42474c" d="M6.5 10.5a2 2 0 0 1 4 0z"></path>
-  <path fill="#42474c" d="M13.5 10.5a2 2 0 0 1 4 0z"></path>
+  <path class="glass:fill-white/50 fill-[#42474c]" d="M6.5 10.5a2 2 0 0 1 4 0z"
+  ></path>
+  <path class="glass:fill-white/50 fill-[#42474c]" d="M13.5 10.5a2 2 0 0 1 4 0z"
+  ></path>
   <path
-    fill="#42474c"
+    class="glass:fill-white/50 fill-[#42474c]"
     d="M7.5 12c0 2.5 2 4.5 4.5 4.5s4.5-2 4.5-4.5c0 0-2 2-4.5 2s-4.5-2-4.5-2z"
   ></path>
 </svg>
