--- a/src/components/icons/LocationIcon.astro
+++ b/src/components/icons/LocationIcon.astro
@@ -17,6 +17,5 @@ const { class: className } = Astro.props;
     stroke-linecap="round"
     stroke-linejoin="round"
     stroke-width="1.5"
-    d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"
-  ></path>
+    d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path>
 </svg>
