--- a/src/components/icons/ShareIcon.astro
+++ b/src/components/icons/ShareIcon.astro
@@ -6,12 +6,7 @@ interface Props {
 const { class: className } = Astro.props;
 ---
 
-<svg
-  class={className}
-  fill="none"
-  viewBox="0 0 24 24"
-  stroke="currentColor"
->
+<svg class={className} fill="none" viewBox="0 0 24 24" stroke="currentColor">
   <path
     stroke-linecap="round"
     stroke-linejoin="round"
